--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         В результате, возникает ряд признаков, которые наблюдаются у людей, отстающих от изменений в современном мире.
         В данной статье мы рассмотрим эти признаки и предложим способы распознавать и преодолевать зависимость от технологий.</p>
 
+        <h1>Зависимость от технологий</h1>
+
     <h2>Как распознать и преодолеть зависимость от технологий</h2>
              <ul>
                    <li>Установите границы: Установите четкие границы по использованию технологий.
